# mos

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  netlify.toml  readme.md
.cargo/: config.toml
.github/: dependabot.yml  dependabot.yml.bak
.github/workflows/: build.yml  docs.yml  release.yml  vscode.yml
docs/: package-lock.json  package.json
docs/src/: index.md
docs/src/.vuepress/: config.js
docs/src/.vuepress/styles/: index.styl  palette.styl
docs/src/guide/: advanced.md  assembler.md  formatter.md  index.md  project-setup.md  unit-testing.md
docs/src/guide/cli/: index.md
docs/src/guide/ide/: index.md  vscode.md
docs/src/guide/subcommands/: format.md  index.md  lsp.md
examples/atari800/colors/: atari800.asm  main.asm
examples/c64/cartridge/: main.asm  mos.toml
examples/c64/scroller/: c64.asm  main.asm  mos.toml
examples/c64/unit-testing/: main.asm
mos/: Cargo.toml
mos-asm/: Cargo.toml
mos-asm-core/: Cargo.toml
mos-asm-core/src/codegen/: mod.rs
mos-asm-core/src/parser/: ast.rs  mod.rs
mos-asm/src/: errors.rs  lib.rs  main.rs
mos-asm/src/codegen/: mod.rs
mos-asm/src/parser/: ast.rs  mod.rs
mos-asm/src/parser2/: ast.rs  mnemonic.rs  mod.rs
mos-asm/test/: valid.asm
mos-core/: Cargo.toml
mos-core/src/: errors.rs  lib.rs  testing.rs
mos-core/src/cbm/: petscii.rs
mos-core/src/codegen/: analysis.rs  config_extractor.rs  config_validator.rs  evaluator.rs  mod.rs  opcodes.rs  program_counter.rs  segment.rs  source_map.rs  symbols.rs  text_encoding.rs
mos-core/src/formatting/: mod.rs
mos-core/src/io/: binary_writer.rs  listing.rs  mod.rs  segment_merger.rs  vice.rs
mos-core/src/parser/: ast.rs  code_map.rs  config_map.rs  identifier.rs  mnemonic.rs  mod.rs  source.rs  testing.rs
mos-core/test-data/format/: mos-default-formatting.toml  valid-formatted.asm  valid-unformatted.asm
mos-testing/: Cargo.toml
mos-testing/src/: lib.rs
mos/src/: config.rs  diagnostic_emitter.rs  errors.rs  formatter.rs  main.rs  memory_accessor.rs  testing.rs  utils.rs
mos/src/commands/: build.rs  format.rs  init.rs  init.toml  lsp.rs  mod.rs  test.rs  version.rs
mos/src/debugger/: connection.rs  mod.rs  protocol.rs  types.rs
mos/src/debugger/adapters/: mod.rs
mos/src/debugger/adapters/test_runner/: mod.rs
mos/src/debugger/adapters/vice/: mod.rs  protocol.rs
mos/src/formatting/: mod.rs
mos/src/lsp/: code_lens.rs  completion.rs  documents.rs  formatting.rs  hover.rs  mod.rs  references.rs  rename.rs  semantic_highlighting.rs  symbols.rs  testing.rs  traits.rs
mos/src/test_runner/: mod.rs
mos/test/: invalid.asm  valid-formatted.asm  valid-unformatted.asm
mos/test-data/test/: some-tests.asm
src/: config.rs  errors.rs  formatter.rs  lib.rs  main.rs  testing.rs
src/codegen/: mod.rs
src/commands/: build.rs  format.rs  init.rs  lsp.rs  mod.rs
src/commands/format/: mod.rs  mod.rs.bak
src/commands/lsp/: messages.rs  mod.rs
src/core/: errors.rs  mod.rs
src/core/cbm/: mod.rs  petscii.rs
src/core/codegen/: analysis.rs  config_extractor.rs  config_validator.rs  mod.rs  opcodes.rs  program_counter.rs  segment.rs  source_map.rs  symbol_table.rs  symbols.rs  text_encoding.rs
src/core/io/: mod.rs  segment_merger.rs  vice.rs
src/core/parser/: ast.rs  code_map.rs  config_map.rs  identifier.rs  mnemonic.rs  mod.rs  source.rs  testing.rs
src/debugger/: connection.rs  mod.rs  types.rs  utils.rs  vice_adapter.rs
src/debugger/adapters/: mod.rs
src/debugger/adapters/vice/: mod.rs  protocol.rs
src/formatting/: mod.rs
src/lsp/: analysis.rs  completion.rs  diagnostics.rs  documents.rs  formatting.rs  goto.rs  highlighting.rs  mod.rs  references.rs  rename.rs  semantic_highlighting.rs  testing.rs
src/parser/: ast.rs  expressions.rs  mnemonic.rs  mod.rs  numbers.rs  parse_tools.rs  whitespace.rs
src/parser2/: mnemonic.rs  mod.rs
test/cli/format/: mos-default-formatting.toml  valid-formatted.asm  valid-unformatted.asm
vscode/: .gitignore  .vscodeignore  README.md  bundle.js  clean.sh  debug.bat  debug.sh  language-configuration.json  mos-version.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
vscode/src/: build-task-provider.ts  download-binary.ts  download_binary.ts  extension.ts  log.ts  net.ts  run-all-tests-task-provider.ts
vscode/src/auto-update/: download-binary.ts  net.ts
vscode/syntaxes/: asm.tmLanguage.json
vscode/test-workspace/: main.asm  test.asm  valid-formatted.asm
