[package]
name = "mos"
version = "0.1.0"
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
edition = "2018"
repository = "https://github.com/datatrash/mos"
license = "MIT"
keywords = ["retro", "6502", "assembler"]

[dependencies]
ansi_term = "0.12"
anyhow = "1"
bitflags = "1.2"
clap = "3.0.0-beta.2"
fs-err = "2"
git-version = "0.3"
itertools = "0.10"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
loggerv = "0.7"
nom = "6"
nom_locate = "3"
smallvec = "1"
thiserror = "1"

[dev-dependencies]
simple_logger = "1.11"
