[package]
name = "mos"
version = "0.0.0" # unused
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
edition = "2018"
repository = "https://github.com/datatrash/mos"
license = "MIT"
keywords = ["retro", "6502", "assembler"]

[dependencies]
ansi_term = "0.12"
anyhow = "1"
bitflags = "1"
clap = "3.0.0-beta.2"
crossbeam-channel = "0.5"
derive_more = "0.99"
dissimilar = "1"
fs-err = "2"
itertools = "0.10"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
loggerv = "0.7"
lsp-types = "0.88"
lsp-server = "0.5"
nom = "6"
nom_locate = "3"
once_cell = "1.7"
path-absolutize = "3"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
strum = { version = "0.20", features = ["derive"] }
thiserror = "1"
toml = "0.5"

[dev-dependencies]
simple_logger = "1"
tempfile = "3"

[profile.dev]
split-debuginfo = "unpacked"