[package]
name = "mos-core"
version = "0.1.0"
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
edition = "2018"
repository = "https://github.com/RoyJacobs/mosdev/tree/master/mos-core"
license = "MIT"
keywords = ["retro", "6502", "assembler"]

[lib]

[dependencies]
log = "0.4"
nom = "6"
nom_locate = "3"
smallvec = "1"
thiserror = "1"