[package]
name = "mos-core"
version = "0.0.0" # unused
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
edition = "2018"
repository = "https://github.com/datatrash/mos"
license = "MIT"
keywords = ["retro", "6502", "assembler"]

[lib]

[dependencies]
ansi_term = "0.12"
bitflags = "1"
codespan-reporting = "0.11"
derive_more = "0.99"
fs-err = "2"
indexmap = "1.6"
itertools = "0.10"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
loggerv = "0.7"
nom = "6"
nom_locate = "3"
once_cell = "1.8"
path-absolutize = "3"
path-dedot = "3"
pathdiff = "0.2"
petgraph = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
toml = "0.5"

[dev-dependencies]
mos-testing = { path = "../mos-testing" }
tempfile = "3"