[package]
name = "mos-testing"
version = "0.0.0" # unused
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
edition = "2018"
repository = "https://github.com/datatrash/mos"
license = "MIT"
keywords = ["retro", "6502", "assembler"]

[lib]

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
simple_logger = "1"