[package]
name = "mos"
version = "0.0.0" # unused
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
edition = "2018"
repository = "https://github.com/datatrash/mos"
license = "MIT"
keywords = ["retro", "6502", "assembler"]

[dependencies]
ansi_term = "0.12"
anyhow = "1"
byteorder = "1.4"
clap = "3.0.0-beta.2"
codespan-reporting = "0.11"
crossbeam-channel = "0.5"
dissimilar = "1"
emulator_6502 = { version = "1.1.0", features = ["implementation_transparency"] }
fs-err = "2"
itertools = "0.10"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
loggerv = "0.7"
lsp-types = "0.89"
lsp-server = "0.5"
mos-core = { path = "../mos-core" }
once_cell = "1.7"
path-absolutize = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.20", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
mos-testing = { path = "../mos-testing" }
tempfile = "3"
